@@ -70,23 +70,15 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
 
-        <!-- Sonar dependency -->
-        <sonar-maven-plugin.version>5.0.0.4389</sonar-maven-plugin.version>
-        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <!--sonar configuration-->
+        <sonar-maven-plugin.version>4.0.0.4121</sonar-maven-plugin.version>
+        <sonar.java.binaries>${project.basedir}/target,${project.basedir}/target/*</sonar.java.binaries>
+        <sonar.token>${CODE_ANALYSIS_TOKEN}</sonar.token>
+        <sonar.login></sonar.login>
+        <sonar.password></sonar.password>
         <sonar.projectKey>uk.gov.companieshouse:efs-submission-web</sonar.projectKey>
-        <sonar.sources>src/main</sonar.sources>
-        <sonar.tests>src/test</sonar.tests>
-        <sonar.verbose>true</sonar.verbose>
-        <sonar.coverage.jacoco.xmlReportPaths>
-            ${project.basedir}/target/site/jacoco/jacoco.xml,
-            ${project.basedir}/target/site/jacoco-it/jacoco.xml
-        </sonar.coverage.jacoco.xmlReportPaths>
-        <sonar.jacoco.reports>${project.basedir}/target/site</sonar.jacoco.reports>
-        <sonar.dependencyCheck.htmlReportPath>
-            ${project.basedir}/target/dependency-check-report.html
-        </sonar.dependencyCheck.htmlReportPath>
-        <sonar.java.binaries>${project.basedir}/target</sonar.java.binaries>
-        <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+        <sonar.projectName>efs-submission-web</sonar.projectName>
+
     </properties>
 
     <dependencyManagement>
